chore: use `ahash`

--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -22,7 +22,7 @@ datafusion-physical-plan.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
-hashbrown = "0.15"
+ahash.workspace = true
 humantime.workspace = true
 prost.workspace = true
 serde.workspace = true
