--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -11,6 +11,7 @@ workspace = true
 api.workspace = true
 aquamarine.workspace = true
 async-trait.workspace = true
+bitflags.workspace = true
 common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
@@ -29,6 +30,7 @@ serde_json.workspace = true
 snafu.workspace = true
 strum.workspace = true
 tokio.workspace = true
+
 
 [dev-dependencies]
 async-stream.workspace = true
