--- a/src/object-store/Cargo.toml
+++ b/src/object-store/Cargo.toml
@@ -12,6 +12,7 @@ services-memory = ["opendal/services-memory"]
 
 [dependencies]
 bytes.workspace = true
+common-base.workspace = true
 common-telemetry.workspace = true
 futures.workspace = true
 lazy_static.workspace = true
@@ -28,6 +29,7 @@ opendal = { version = "0.52", features = [
     "services-s3",
 ] }
 prometheus.workspace = true
+serde.workspace = true
 tokio.workspace = true
 uuid.workspace = true
 
