--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -43,12 +43,9 @@ use_memory_store = false
 ## - Using shared storage (e.g., s3).
 enable_region_failover = false
 
-## Delay for registering region failure detectors.
-## Helps prevent premature initialization of region failure detectors
-## when cluster maintenance mode is not immediately enabled after metasrv startup,
-## especially when the cluster is not deployed through the recommended GreptimeDB Operator.
-## Without this delay, registering region failure detectors before all datanodes are fully started
-## may trigger unnecessary region failover during startup.
+## Configures a delay before starting region failure detection.
+## This delay helps prevent Metasrv from triggering unnecessary region failovers before all Datanodes are fully started.
+## Especially useful when the cluster is not deployed with GreptimeDB Operator and maintenance mode is not enabled.
 region_failure_detector_initialization_delay = '10m'
 
 ## Whether to allow region failover on local WAL.
