--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -720,6 +720,9 @@ jobs:
           save-if: ${{ github.ref == 'refs/heads/main' }}
       - name: Install latest nextest release
         uses: taiki-e/install-action@nextest
+      - name: Setup Postgres
+        working-directory: tests-integration/fixtures
+        run: docker compose up postgres
       - name: Setup external services
         working-directory: tests-integration/fixtures
         run: docker compose up -d --wait
